<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:keepScreenOn="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_tiles">
        <RelativeLayout
            android:id="@+id/won_background"
            android:layout_width="match_parent"
            android:background="@drawable/background_list"
            tools:context="ch.m3ts.display.MatchWonActivity"
            android:layout_height="match_parent">
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:columnCount="1"
                android:rowCount="2">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:id="@+id/winner_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text=""
                        android:textColor="@color/primary_light"
                        android:textSize="60sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/mwWon"
                        android:textColor="@color/primary_light"
                        android:textSize="60sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <Button
                    android:id="@+id/play_again"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radius_background"
                    android:backgroundTint="@android:color/secondary_text_light"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:paddingStart="72dp"
                    android:paddingEnd="72dp"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:elevation="8dp"
                    android:onClick="playAgain"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:text="@string/mwStartNew"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/show_stats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radius_background"
                    android:backgroundTint="@android:color/secondary_text_light"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:paddingStart="72dp"
                    android:paddingEnd="72dp"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:elevation="8dp"
                    android:onClick="showStats"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:text="@string/mwStats"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/back_to_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radius_background"
                    android:backgroundTint="@android:color/secondary_text_light"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:paddingStart="72dp"
                    android:paddingEnd="72dp"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:layout_gravity="center"
                    android:elevation="8dp"
                    android:onClick="backToMenu"
                    android:layout_marginBottom="8dp"
                    android:text="@string/mwMenu"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </GridLayout>

            <FrameLayout
                android:id="@+id/match_stats"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>