...
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/player_left"
                        android:layout_width="0dp"
                        android:layout_weight="0.375"
                        android:layout_height="match_parent"
                        android:textColor="@color/primary_light"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="0dp"
                        android:layout_weight="0.25"
                        android:layout_height="match_parent"
                        android:tint="@color/primary_light"
                        android:textColor="@color/primary_light"
                        android:textSize="30sp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/player_right"
                        android:layout_width="0dp"
                        android:layout_weight="0.375"
                        android:layout_height="match_parent"
                        android:textColor="@color/primary_light"
                        android:textStyle="bold"
                        android:textSize="30sp"
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="#C1C1C1" />

                <ExpandableListView
                    android:id="@+id/game_history"
                    android:layout_height="250dp"
                    android:layout_width="match_parent"
                    android:indicatorEnd="?android:attr/expandableListPreferredItemIndicatorLeft"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="0.5dp" />
            </GridLayout>
...
