<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:keepScreenOn="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_tiles">
        <RelativeLayout
            android:id="@+id/mainBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_list"
            tools:context="ch.m3ts.MainActivity">
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="4"
                android:layout_centerVertical="true"
                android:columnCount="1"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/appName"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="60sp"
                    android:textColor="@color/primary_light"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/appNameLong"
                    android:textStyle="normal"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@color/primary_light" />
                <Button
                    android:id="@+id/mainUseAsTrackerBtn"
                    android:onClick="onUseAsTracker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radius_background"
                    android:backgroundTint="@android:color/secondary_text_light"
                    android:layout_marginTop="20dp"
                    android:paddingStart="72dp"
                    android:paddingEnd="72dp"
                    android:elevation="8dp"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:text="@string/mainTrackerBtnLabel"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="#fff"
                    android:textSize="18sp"/>
                <Button
                    android:id="@+id/mainUseAsDisplayBtn"
                    android:onClick="onUseAsDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radius_background"
                    android:backgroundTint="@android:color/secondary_text_light"
                    android:elevation="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:paddingStart="72dp"
                    android:paddingEnd="72dp"
                    android:textAllCaps="false"
                    android:textStyle="normal"
                    android:layout_marginBottom="8dp"
                    android:text="@string/mainDisplayBtnLabel"
                    android:textColor="#fff"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/hololensIPText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="HoloLens IP address"
                    tools:visibility="visible" />
            </GridLayout>

            <ImageButton
                android:id="@+id/live_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radius_background"
                android:backgroundTint="@android:color/secondary_text_light"
                android:elevation="8dp"
                android:onClick="onOpenMenu"
                android:padding="8dp"
                android:src="@drawable/settings"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:tint="@android:color/white" />

            <include
                layout="@layout/debug_info"
                android:visibility="invisible" />

            <Button
                android:id="@+id/mainHowToPlay"
                android:onClick="onStartTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_background"
                android:backgroundTint="@android:color/secondary_text_light"
                android:elevation="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAllCaps="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:textStyle="normal"
                android:text="@string/mainTutorialBtnLabel"
                android:textColor="#fff"
                android:drawableLeft="@drawable/ic_help"
                android:drawableTint="@color/primary_light"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
