<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/background_tiles"
        android:elevation="8dp">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:rowCount="2"
            android:columnCount="1">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="4"
                android:paddingBottom="20dp">
                <TextView
                    android:id="@+id/left_score"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/msInitialValue"
                    android:textSize="140sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:background="@color/player_left_background"
                    android:textColor="@color/primary_light"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="8dp"
                    android:layout_columnWeight="1"/>
                <TextView
                    android:id="@+id/left_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:text="@string/msInitialValue"
                    android:layout_gravity="top"
                    android:textAlignment="center"
                    android:elevation="8dp"
                    android:background="@color/player_left_background"
                    android:textColor="#fff"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textSize="55sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat"
                    android:layout_marginEnd="10dp"/>
                <TextView
                    android:id="@+id/right_games"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/msInitialValue"
                    android:textSize="55sp"
                    android:textStyle="bold"
                    android:elevation="8dp"
                    android:layout_gravity="top"
                    android:textAlignment="center"
                    android:background="@color/player_right_background"
                    android:textColor="@color/primary_light"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    tools:ignore="RtlCompat"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/right_score"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/msInitialValue"
                    android:textStyle="bold"
                    android:textSize="140sp"
                    android:elevation="8dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/player_right_background"
                    android:textColor="#fff"
                    android:paddingTop="10dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="10dp"
                    android:layout_columnWeight="1"/>
            </GridLayout>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="1"
                android:columnCount="2"
                android:padding="5dp"
                android:background="#00000000"
                android:elevation="8dp">
                <TextView
                    android:id="@+id/left_name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Player 1"
                    android:textAllCaps="true"
                    android:textSize="25sp"
                    android:layout_gravity="fill_horizontal"
                    android:textStyle="bold"
                    android:textColor="@color/primary_light"
                    android:layout_columnWeight="1"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/right_name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textAlignment="textEnd"
                    android:textAllCaps="true"
                    android:layout_gravity="fill_horizontal"
                    android:layout_columnWeight="1"
                    android:text="Player 2"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary_light"
                    android:layout_margin="10dp"/>
            </GridLayout>
        </GridLayout>
    </RelativeLayout>
    <ImageButton
        android:id="@+id/btnDisplayRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radius_background"
        android:backgroundTint="@color/primary_dark"
        android:contentDescription="Refresh Button"
        android:elevation="8dp"
        android:padding="8dp"
        android:src="@android:drawable/ic_popup_sync"
        tools:src="@android:drawable/ic_popup_sync" />

    <ImageButton
        android:id="@+id/btnPauseResumeReferee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radius_background"
        android:backgroundTint="@color/primary_dark"
        android:contentDescription="Pause / Resume Button"
        android:elevation="8dp"
        android:padding="8dp"
        android:src="@android:drawable/ic_media_pause"
        tools:src="@android:drawable/ic_media_pause" />

    <ImageButton
        android:id="@+id/btnMirrorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/radius_background"
        android:backgroundTint="@color/primary_dark"
        android:contentDescription="Mirror Layout"
        android:elevation="8dp"
        android:padding="8dp"
        android:src="@drawable/swap"
        tools:src="@drawable/swap" />
</RelativeLayout>
